--- a/inst/app/www/style.css
+++ b/inst/app/www/style.css
@@ -10,11 +10,11 @@ h1 { font-size: 4.0rem; line-height: 1.2;  letter-spacing: -.1rem;}
 h2 { font-size: 3.6rem; line-height: 1.25; letter-spacing: -.1rem; }
 h3 { font-size: 3.0rem; line-height: 1.3;  letter-spacing: -.1rem; }
 h4 { font-size: 2.5rem; line-height: 1.35; letter-spacing: -.08rem; }
-h5 { font-size: 2.0rem; line-height: 1.5;  letter-spacing: -.05rem; }
+h5 { font-size: 2.0rem; line-height: 1.3;  letter-spacing: -.05rem; }
 h6 { font-size: 1.5rem; line-height: 1.6;  letter-spacing: 0; }
 
 body, p{
-  font-size: 1.5rem; /* currently ems cause chrome bug misinterpreting rems on body element */
+  font-size: 1.45rem; /* currently ems cause chrome bug misinterpreting rems on body element */
   line-height: 1.6;
   font-weight: 100;
   font-family: Roman, Helvetica, Tahoma, Geneva, Arial, sans-serif;
@@ -36,16 +36,22 @@ hr {
 	width: 99%;
 }
 
-#input_demos_ui_1-controls_ct {
-z-index: 1000;
-  
-}
 
-#inputCensusTracts {
+#input_demos_ui_1-inputCensusTracts {
 	margin-left: 5%;
-	z-index: 1000;
-
+	z-index: 900;
 }
+
+#notes {
+	margin-left: 4%;
+	margin-right: 4%;
+	width: 90%;
+}
+
+.navbar.navbar-default.navbar-static-top {
+	margin-bottom: 12px;
+}
+
 .navbar-default {
 	background-color: white;
 	border-color: white;
