--- a/inst/app/www/style.css
+++ b/inst/app/www/style.css
@@ -14,12 +14,15 @@ h5 { font-size: 2.0rem; line-height: 1.3;  letter-spacing: -.05rem; }
 h6 { font-size: 1.5rem; line-height: 1.6;  letter-spacing: 0; }
 
 body {
-  font-size: 1.45rem; /* currently ems cause chrome bug misinterpreting rems on body element */
-  line-height: 1.6;
-  font-weight: 100;
-  font-family: Roman, Helvetica, Tahoma, Geneva, Arial, sans-serif;
-  background-color: var(--council-white);
-  color: var(--council-black);
+	font-size: 1.45rem;
+	line-height: 1.6;
+	font-weight: 100;
+	font-family: Roman, Helvetica, Tahoma, Geneva, Arial, sans-serif;
+	background-color: var(--council-white);
+	color: var(--council-black);
+	max-width: 70%;
+	margin-left: 15%;
+	margin-right: 15%;
 }
 
 p {
@@ -76,7 +79,6 @@ hr {
 .navbar-default {
     font-family: Roman, Helvetica, Tahoma, Geneva, Arial, sans-serif;
     color: var(--council-black);
-}
 }
 
 .navbar-header {
