--- a/inst/app/www/style.css
+++ b/inst/app/www/style.css
@@ -87,6 +87,9 @@ hr {
 
 .navbar-header {
   margin: 1%;
+  height: 95px; 
+  width: 100%;
+  color: #0054a4;
 }
 
 .navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active > a:focus, .navbar-default .navbar-nav > .active > a:hover {
