popgrowth to navbarmenu

--- a/inst/app/www/style.css
+++ b/inst/app/www/style.css
@@ -40,7 +40,8 @@ hr {
 	margin-bottom: 20px;
 	border: 0;
 	border-top: 1px solid #eee;
-	width: 99%;
+	width: 100%;
+	color:#002B5C;
 }
 
 /*
@@ -69,7 +70,6 @@ hr {
 .navbar-default {
 	background-color: #ededed;
 	border-color: #ededed;
-//  color: #0054a4; 
 	font-size: 16px; 
 	font-weight: bold;
 	text-transform: uppercase;
@@ -111,12 +111,11 @@ hr {
 	background-color: #d6d6d6;
 	height: 95px;
 }
-/*
+
 .navbar-nav {
-	float: right;
-	margin: 0;
+	margin: auto;
 }
-*/
+
 
 .well {
 	min-height: 20px;
