--- a/inst/app/www/colors.css
+++ b/inst/app/www/colors.css
@@ -2,6 +2,7 @@
   --council-blue:  #0054a4;
   --council-black: #252525;
   --council-white: #FFFFFF;
+  --council-gray:  #EDEDED;
   --cd-green:      #78A22F;
   --mts-red:       #EE3124;
 }
