--- a/inst/app/www/style.css
+++ b/inst/app/www/style.css
@@ -20,9 +20,7 @@ body {
 	font-family: Roman, Helvetica, Tahoma, Geneva, Arial, sans-serif;
 	background-color: var(--council-white);
 	color: var(--council-black);
-	max-width: 70%;
-	margin-left: 15%;
-	margin-right: 15%;
+	max-width: 100%;
 }
 
 p {
@@ -67,29 +65,37 @@ hr {
 
 */
 .navbar-default {
-	background-color: #ededed;
-	border-color: #ededed;
-//  color: #0054a4; 
+	background-color: var(--council-gray);
+	border-color: var(--council-gray);
+	color: var(--council-blue);
 	font-size: 16px; 
-	font-weight: bold;
 	text-transform: uppercase;
 	margin-right: 10px;
 	margin-left: 10px;
-    font-family: "Medium-Condensed", "Helvetica", "Tahoma", "Geneva", "Arial Narrow", "Arial", sans-serif;
+  font-family: Bold-Condensed, "Helvetica", "Tahoma", "Geneva", "Arial Narrow", "Arial", sans-serif;
 	height: 95px;
-	vertical-align:middle;
-	//    margin-left: 30px;
-  //  float: left;
+	width: 100%;
+	padding-right: 10%;
+	padding-left: 10%;
 }
 
-/*
+
 .navbar-brand {
-  font-family: Light, Helvetica, Tahoma, Geneva, "Arial Narrow", Arial,  sans-serif;
-//  font-weight: 300;
-//  font-size: 3.6rem;
-  color: var(--council-blue);//ack);
+  font-family: Bold-Condensed, "Helvetica", "Tahoma", "Geneva", "Arial Narrow", "Arial", sans-serif;
+  color: var(--council-blue);
 }
 
+.navbar-default .navbar-nav > li > a {
+  color: var(--council-blue);
+  height: 95px;
+  padding-top: 39.5px;
+  padding-bottom: 39.5px;
+}
+
+.navbar-default .navbar-nav > li > a:focus, .navbar-default .navbar-nav > li > a:hover {
+	color: var(--council-blue);
+	background-color: #d6d6d6;
+}
 
 /* //unclear what this is doing
 .navbar-default .navbar-brand {
@@ -119,6 +125,15 @@ hr {
 	margin: 0;
 }
 */
+
+.tab-content {
+	min-width: 950px;
+	padding: 5px;
+	margin-left: 10%;
+	width: 80%;
+	margin-right: 10%;
+	max-width: 100%;
+}
 
 .well {
 	min-height: 20px;
