--- a/inst/app/www/style.css
+++ b/inst/app/www/style.css
@@ -6,15 +6,15 @@ h1, h2, h3, h4, h5, h6 {
   font-family: Light, Helvetica, Tahoma, Geneva, "Arial Narrow", Arial,  sans-serif;
 }
 
-h1 { font-size: 4.0rem; line-height: 1.2;  letter-spacing: -.1rem;}
-h2 { font-size: 3.6rem; line-height: 1.25; letter-spacing: -.1rem; }
-h3 { font-size: 3.0rem; line-height: 1.3;  letter-spacing: -.1rem; }
-h4 { font-size: 2.5rem; line-height: 1.35; letter-spacing: -.08rem; }
-h5 { font-size: 2.0rem; line-height: 1.3;  letter-spacing: -.05rem; }
-h6 { font-size: 1.5rem; line-height: 1.6;  letter-spacing: 0; }
+h1 { font-size: 36px; line-height: 1.2;  letter-spacing: -.1rem;}
+h2 { font-size: 22px; line-height: 1.25; letter-spacing: -.1rem; }
+h3 { font-size: 20px; line-height: 1.3;  letter-spacing: -.1rem; }
+h4 { font-size: 18px; line-height: 1.35; letter-spacing: -.08rem; }
+h5 { font-size: 16px; line-height: 1.3;  letter-spacing: -.05rem; }
+h6 { font-size: 14px; line-height: 1.6;  letter-spacing: 0; }
 
 body {
-	font-size: 1.45rem;
+	font-size: 13px;
 	line-height: 1.6;
 	font-weight: 100;
 	font-family: Roman, Helvetica, Tahoma, Geneva, Arial, sans-serif;
@@ -25,7 +25,7 @@ body {
 
 p {
 	margin: 0 0 10px;
-	font-size: 1.55rem;
+	font-size: 13px;
 }
 
 b, strong {
@@ -125,6 +125,15 @@ hr {
 	margin: 0;
 }
 */
+
+.nav-tabs>li>a {
+ margin-right:2px;
+ line-height:1.42857143;
+ border:1px solid transparent;
+ border-radius:4px 4px 0 0;
+ font-size: 16px;
+}
+
 
 .tab-content {
 	min-width: 950px;
