--- a/inst/app/www/style.css
+++ b/inst/app/www/style.css
@@ -1,9 +1,14 @@
 h1, h2, h3, h4, h5, h6 {
-  margin-top: 0;
-  margin-bottom: 1rem;
+  margin-top: 1rem;
+  margin-bottom: 0;
+  margin-left: auto !important;
+  margin-right: auto !important;
+  /*margin-top: 0;*/
+  /*margin-bottom: 1rem;*/
   font-weight: 300;
   color: var(--council-blue);
   font-family: Light, Helvetica, Tahoma, Geneva, "Arial Narrow", Arial,  sans-serif;
+  max-width: 1200px;
 }
 
 h1 { font-size: 36px; line-height: 1.2;  letter-spacing: -.1rem;}
@@ -12,6 +17,8 @@ h3 { font-size: 20px; line-height: 1.3;  letter-spacing: -.1rem; }
 h4 { font-size: 18px; line-height: 1.35; letter-spacing: -.08rem; }
 h5 { font-size: 16px; line-height: 1.3;  letter-spacing: -.05rem; }
 h6 { font-size: 14px; line-height: 1.6;  letter-spacing: 0; }
+
+.hdg-center { text-align: auto; }
 
 body {
 	font-size: 13px;
@@ -24,8 +31,9 @@ body {
 }
 
 p {
-	margin: 0 0 10px;
+	margin: 0 auto !important; /*0 10px;*/
 	font-size: 13px;
+	max-width: 1200px;
 }
 
 b, strong {
