--- a/inst/app/www/style.css
+++ b/inst/app/www/style.css
@@ -18,15 +18,15 @@ ol, ul, li {
   width: auto;
 }
 
-h1 { font-size: 36px; line-height: 1.2;  letter-spacing: -.1rem;}
-h2 { font-size: 22px; line-height: 1.25; letter-spacing: -.1rem; }
-h3 { font-size: 20px; line-height: 1.3;  letter-spacing: -.1rem; }
-h4 { font-size: 18px; line-height: 1.35; letter-spacing: -.08rem; }
-h5 { font-size: 16px; line-height: 1.3;  letter-spacing: -.05rem; }
-h6 { font-size: 14px; line-height: 1.6;  letter-spacing: 0; }
+h1 { font-size: 36pt; line-height: 1.2;  letter-spacing: -.1rem;}
+h2 { font-size: 22pt; line-height: 1.25; letter-spacing: -.1rem; }
+h3 { font-size: 20pt; line-height: 1.3;  letter-spacing: -.1rem; }
+h4 { font-size: 18pt; line-height: 1.35; letter-spacing: -.08rem; }
+h5 { font-size: 16pt; line-height: 1.3;  letter-spacing: -.05rem; }
+h6 { font-size: 14pt; line-height: 1.6;  letter-spacing: 0; }
 
 body {
-	font-size: 13px;
+	font-size: 13pt;
 	line-height: 1.6;
 	font-weight: 100;
 	font-family: Roman, Helvetica, Tahoma, Geneva, Arial, sans-serif;
@@ -36,7 +36,7 @@ body {
 
 p {
 	margin: 0 auto !important; /*0 10px;*/
-	font-size: 13px;
+	font-size: 13pt;
   max-width: 1200px;
   width: auto;
 }
@@ -81,7 +81,7 @@ hr {
 	background-color: var(--council-gray);
 	border-color: var(--council-gray);
 	color: var(--council-blue);
-	font-size: 16px; 
+	font-size: 16pt; 
 	text-transform: uppercase;
 	margin-right: 10px;
 	margin-left: 10px;
@@ -138,7 +138,7 @@ hr {
  line-height:1.42857143;
  border:1px solid transparent;
  border-radius:4px 4px 0 0;
- font-size: 16px;
+ font-size: 16pt;
 }
 
 
