--- a/inst/app/www/style.css
+++ b/inst/app/www/style.css
@@ -35,7 +35,7 @@ h1, h2, h3, h4, h5, h6 {
   /*margin-bottom: 1rem;*/
   font-weight: 300;
   color: var(--council-blue);
-  font-family: Light, Helvetica, Tahoma, Geneva, "Arial Narrow", Arial,  sans-serif;
+  font-family: "Light", Helvetica, Tahoma, Geneva, "Arial Narrow", Arial,  sans-serif;
   max-width: 1200px; 
   width: auto;
 }
